--- a/digital-business-card/src/components/Header/Header.css
+++ b/digital-business-card/src/components/Header/Header.css
@@ -1,41 +1,74 @@
-
 .header-part {
-    text-align: center;
+  text-align: center;
 }
 
 .header-part > img {
-    width: 450px;
-    height: 400px;
-    margin: 2rem auto;
+  width: 450px;
+  height: 400px;
+  margin: 2rem auto;
 }
 
 .credentials > h1 {
-    color: #F5F5F5;
-    padding-bottom: 0.5rem;
+  color: #f5f5f5;
+  padding-bottom: 0.5rem;
 }
 
 .credentials > h4 {
-    color: #F3BF99;
-    font-size: 20px;
-    padding-bottom: 1.5rem;
+  color: #f3bf99;
+  font-size: 20px;
+  padding-bottom: 1.5rem;
 }
 
 .credentials > a {
-    color: #F5F5F5;
-    text-decoration: none;
-    font-size: 18px;
+  color: #f5f5f5;
+  text-decoration: none;
+  font-size: 18px;
 }
 
 .btns {
-    padding-top: 1.5rem;
+  padding-top: 2.5rem;
 }
 
 .btns > a {
-    margin: 1rem;
+  margin: 1rem;
 }
 
-.linkedin-btn-img {
-    margin-bottom: 1px;
-    height: 58px;
-    width: 179px;
+.email-btn {
+  text-decoration: none;
+  background-color: #D1D5DB;
+  padding: 10px 35px;
+  border-radius: 7%;
+  color: black;
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.email-btn > i {
+  background: none;
+  color: black;
+  margin-right: 10px;
+}
+
+.email-btn:hover {
+  background-color: white;
+}
+
+.linkedin-btn {
+  text-decoration: none;
+  background-color: #5093e2;
+  padding: 10px 35px;
+  border-radius: 7%;
+  color: white;
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.linkedin-btn > i {
+  background: none;
+  color: white;
+  margin-right: 10px;
+}
+
+.linkedin-btn:hover {
+  background-color: rgb(67, 67, 236);
 }
