--- a/digital-business-card/src/components/Header/Header.css
+++ b/digital-business-card/src/components/Header/Header.css
@@ -3,9 +3,9 @@
 }
 
 .header-part > img {
-  width: 450px;
-  height: 400px;
-  margin: 2rem auto;
+  width: 100%;
+  height: 500px;
+  margin: 0rem auto;
 }
 
 .credentials > h1 {
@@ -35,7 +35,7 @@
 
 .email-btn {
   text-decoration: none;
-  background-color: #D1D5DB;
+  background-color: #d1d5db;
   padding: 10px 35px;
   border-radius: 7%;
   color: black;
@@ -71,4 +71,16 @@
 
 .linkedin-btn:hover {
   background-color: rgb(67, 67, 236);
+}
+
+@media only screen and (max-width: 1030px) {
+  .btns {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .header-part > img {
+    width: 100%;
+    margin-top: 0;
+  }
 }
